--- a/R_mark_data_visualization.Rmd
+++ b/R_mark_data_visualization.Rmd
@@ -1,10 +1,13 @@
 ---
-title: "Data Visualization Sapun"
+title: "Data Visualization Project"
 author: "Madison Pickett"
 date: "5/8/2022"
 output: html_document
 ---
+#Individual Data Visualization Assignment
+## Noted: I have uploaded all the datasets in the repo, but did not change the links, so they link back to a repo that is being used for my research. 
 
+## This 
 ```{r}
 library(tidyverse)
 library(dplyr)
@@ -568,9 +571,9 @@ RM_AM_Day5
 #plot the data
 library(cowplot)
 df_nbd_A3<-as_tibble(c(d_nbd_n1_A3_231_meanint$meanIntnbd1,d_nbd_n2_A_231_meanint$meanIntnbd1, d_nbd_n3_A3_231_meanint$meanIntnbd1))
-df_dapi<- as_tibble(c(d_draq_n1_A3_231$n, d_draq_n2_A_231$n, d_draq_n3_A3_231$n))
+df_draq<- as_tibble(c(d_draq_n1_A3_231$n, d_draq_n2_A_231$n, d_draq_n3_A3_231$n))
 df_num_A3<- as_tibble(c(d_nbd_n1_A3_231_meanint$ImageNumber,d_nbd_n2_A_231_meanint$ImageNumber, d_nbd_n3_A3_231_meanint$ImageNumber))
-df_sum_A3<- bind_cols(df_num_A3, df_num_A3, df_dapi, df_nbd_A3)
+df_sum_A3<- bind_cols(df_num_A3, df_num_A3, df_draq, df_nbd_A3)
 colnames(df_sum_A3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 
@@ -584,9 +587,9 @@ fig_A3
 
 ## RANDOM day 3
 df_nbd_R3<-as_tibble(c(d_nbd_n1_R3_231_meanint$meanIntnbd1,d_nbd_n2_R_231_meanint$meanIntnbd1, d_nbd_n3_R3_231_meanint$meanIntnbd1))
-dfR3_dapi<- as_tibble(c(d_draq_n1_R3_231$n, d_draq_n2_R_231$n, d_draq_n3_R3_231$n))
+dfR3_draq<- as_tibble(c(d_draq_n1_R3_231$n, d_draq_n2_R_231$n, d_draq_n3_R3_231$n))
 df_num_R3<- as_tibble(c(d_nbd_n1_R3_231_meanint$ImageNumber,d_nbd_n2_R_231_meanint$ImageNumber, d_nbd_n3_R3_231_meanint$ImageNumber))
-df_sum_R3<- bind_cols(df_num_R3, df_num_R3, dfR3_dapi, df_nbd_R3)
+df_sum_R3<- bind_cols(df_num_R3, df_num_R3, dfR3_draq, df_nbd_R3)
 colnames(df_sum_R3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 
@@ -601,9 +604,9 @@ fig_R3
 
 ##RM Day 3
 df_nbd_RM3<-as_tibble(c(d_nbd_n1_RM3_231_meanint$meanIntnbd1,d_nbd_n2_RM_231_meanint$meanIntnbd1, d_nbd_n3_RM3_231_meanint$meanIntnbd1))
-dfRM3_dapi<- as_tibble(c(d_draq_n1_RM3_231$n, d_draq_n2_RM_231$n, d_draq_n3_RM3_231$n))
+dfRM3_draq<- as_tibble(c(d_draq_n1_RM3_231$n, d_draq_n2_RM_231$n, d_draq_n3_RM3_231$n))
 df_num_RM3<- as_tibble(c(d_nbd_n1_RM3_231_meanint$ImageNumber,d_nbd_n2_RM_231_meanint$ImageNumber, d_nbd_n3_RM3_231_meanint$ImageNumber))
-df_sum_RM3<- bind_cols(df_num_RM3, df_num_RM3, dfRM3_dapi, df_nbd_RM3)
+df_sum_RM3<- bind_cols(df_num_RM3, df_num_RM3, dfRM3_draq, df_nbd_RM3)
 colnames(df_sum_RM3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 df_sum_RM3<- as_data_frame(df_sum_RM3)
@@ -616,9 +619,9 @@ fig_RM3
 
 ## Aligned Matrigel Day 3
 df_nbd_AM3<-as_tibble(c(d_nbd_n1_AM3_231_meanint$meanIntnbd1,d_nbd_n2_AM_231_meanint$meanIntnbd1, d_nbd_n3_AM3_231_meanint$meanIntnbd1))
-dfAM3_dapi<- as_tibble(c(d_draq_n1_AM3_231$n, d_draq_n2_AM_231$n, d_draq_n3_AM3_231$n))
+dfAM3_draq<- as_tibble(c(d_draq_n1_AM3_231$n, d_draq_n2_AM_231$n, d_draq_n3_AM3_231$n))
 df_num_AM3<- as_tibble(c(d_nbd_n1_AM3_231_meanint$ImageNumber,d_nbd_n2_AM_231_meanint$ImageNumber, d_nbd_n3_AM3_231_meanint$ImageNumber))
-df_sum_AM3<- bind_cols(df_num_AM3, df_num_AM3, dfAM3_dapi, df_nbd_AM3)
+df_sum_AM3<- bind_cols(df_num_AM3, df_num_AM3, dfAM3_draq, df_nbd_AM3)
 colnames(df_sum_AM3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 df_sum_AM3<- as_data_frame(df_sum_AM3)
@@ -629,8 +632,7 @@ fig_AM3<-ggplot(df_sum_AM3, aes(x= Image_Number, y = Image__Number))+
   scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM3, 40))
 fig_AM3
 
-plot_grid(fig_A3, fig_R3, labels = c('A', 'R'))
-plot_grid(fig_AM3, fig_RM3, labels = c('AM', 'RM'))
+
 
 
 ```
@@ -639,9 +641,9 @@ plot_grid(fig_AM3, fig_RM3, labels = c('AM', 'RM'))
 #plot the data Day5
 library(cowplot)
 df_nbd_A5<-as_tibble(c(d_nbd_n1_A5_231_meanint$meanIntnbd1,d_nbd_n2_A5_231_meanint$meanIntnbd1, d_nbd_n3_A5_231_meanint$meanIntnbd1))
-df_dapi_A5<- as_tibble(c(d_draq_n1_A5_231$n, d_draq_n2_A5_231$n, d_draq_n3_A5_231$n))
+df_draq_A5<- as_tibble(c(d_draq_n1_A5_231$n, d_draq_n2_A5_231$n, d_draq_n3_A5_231$n))
 df_num_A5<- as_tibble(c(d_nbd_n1_A5_231_meanint$ImageNumber,d_nbd_n2_A5_231_meanint$ImageNumber, d_nbd_n3_A5_231_meanint$ImageNumber))
-df_sum_A5<- bind_cols(df_num_A5, df_num_A5, df_dapi_A5, df_nbd_A5)
+df_sum_A5<- bind_cols(df_num_A5, df_num_A5, df_draq_A5, df_nbd_A5)
 colnames(df_sum_A5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 
@@ -655,9 +657,9 @@ fig_A5
 
 ## RANDOM day 5
 df_nbd_R5<-as_tibble(c(d_nbd_n1_R5_231_meanint$meanIntnbd1,d_nbd_n2_R5_231_meanint$meanIntnbd1, d_nbd_n3_R5_231_meanint$meanIntnbd1))
-dfR5_dapi<- as_tibble(c(d_draq_n1_R5_231$n, d_draq_n2_R5_231$n, d_draq_n3_R5_231$n))
+dfR5_draq<- as_tibble(c(d_draq_n1_R5_231$n, d_draq_n2_R5_231$n, d_draq_n3_R5_231$n))
 df_num_R5<- as_tibble(c(d_nbd_n1_R5_231_meanint$ImageNumber,d_nbd_n2_R5_231_meanint$ImageNumber, d_nbd_n3_R5_231_meanint$ImageNumber))
-df_sum_R5<- bind_cols(df_num_R5, df_num_R5, dfR5_dapi, df_nbd_R5)
+df_sum_R5<- bind_cols(df_num_R5, df_num_R5, dfR5_draq, df_nbd_R5)
 colnames(df_sum_R5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 
@@ -672,9 +674,9 @@ fig_R5
 
 ##RM Day 3
 df_nbd_RM5<-as_tibble(c(d_nbd_n1_RM5_231_meanint$meanIntnbd1,d_nbd_n2_RM5_231_meanint$meanIntnbd1, d_nbd_n3_RM5_231_meanint$meanIntnbd1))
-dfRM5_dapi<- as_tibble(c(d_draq_n1_RM5_231$n, d_draq_n2_RM5_231$n, d_draq_n3_RM5_231$n))
+dfRM5_draq<- as_tibble(c(d_draq_n1_RM5_231$n, d_draq_n2_RM5_231$n, d_draq_n3_RM5_231$n))
 df_num_RM5<- as_tibble(c(d_nbd_n1_RM5_231_meanint$ImageNumber,d_nbd_n2_RM5_231_meanint$ImageNumber, d_nbd_n3_RM5_231_meanint$ImageNumber))
-df_sum_RM5<- bind_cols(df_num_RM5, df_num_RM5, dfRM5_dapi, df_nbd_RM5)
+df_sum_RM5<- bind_cols(df_num_RM5, df_num_RM5, dfRM5_draq, df_nbd_RM5)
 colnames(df_sum_RM5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 df_sum_RM5<- as_data_frame(df_sum_RM5)
@@ -687,9 +689,9 @@ fig_RM5
 
 ## Aligned Matrigel Day 
 df_nbd_AM5<-as_tibble(c(d_nbd_n1_AM5_231_meanint$meanIntnbd1,d_nbd_n2_AM5_231_meanint$meanIntnbd1, d_nbd_n3_AM5_231_meanint$meanIntnbd1))
-dfAM5_dapi<- as_tibble(c(d_draq_n1_AM5_231$n, d_draq_n2_AM5_231$n, d_draq_n3_AM5_231$n))
+dfAM5_draq<- as_tibble(c(d_draq_n1_AM5_231$n, d_draq_n2_AM5_231$n, d_draq_n3_AM5_231$n))
 df_num_AM5<- as_tibble(c(d_nbd_n1_AM5_231_meanint$ImageNumber,d_nbd_n2_AM5_231_meanint$ImageNumber, d_nbd_n3_AM5_231_meanint$ImageNumber))
-df_sum_AM5<- bind_cols(df_num_AM5, df_num_AM5, dfAM5_dapi, df_nbd_AM5)
+df_sum_AM5<- bind_cols(df_num_AM5, df_num_AM5, dfAM5_draq, df_nbd_AM5)
 colnames(df_sum_AM5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
 df_sum_AM5<- as_data_frame(df_sum_AM5)
@@ -699,6 +701,10 @@ fig_AM5<-ggplot(df_sum_AM5, aes(x= Image_Number, y = Image__Number))+
   geom_point(aes(color = intensity, size = num_of_nuclei))+
   scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM5, 40))
 fig_AM5
+
+
+plot_grid(fig_A3, fig_R3, labels = c('A', 'R'))
+plot_grid(fig_AM3, fig_RM3, labels = c('AM', 'RM'))
 
 plot_grid(fig_A5, fig_R5, labels = c('A', 'R'))
 plot_grid(fig_AM5, fig_RM5, labels = c('AM', 'RM'))
