--- a/R_mark_data_visualization.Rmd
+++ b/R_mark_data_visualization.Rmd
@@ -4,33 +4,39 @@ author: "Madison Pickett"
 date: "5/8/2022"
 output: html_document
 ---
-#Individual Data Visualization Assignment
-## Noted: I have uploaded all the datasets in the repo, but did not change the links, so they link back to a repo that is being used for my research. 
+#Individual Data Visualization Assignment (Noted: I have uploaded all the datasets in the repo, but did not change the links, so they link back to a repo that is being used for my research.)
+This project looks at the glucose uptake of 231 (highly invasive) cancer cells on biomaterial meshes of different alignments. Our hypothesis is that as the alignment increases (becomes more aligned), the cancer cells will adopt a more invasive phenotype and trend toward glycolysis. A major marker of glycolysis is glucose uptake, which can be measured using NBD glucose (a fluorescent glucose analog). This experiment looks at NBD uptake at a per cell level, at two different time points (Day 3 and Day 5). A python script was used to process the images, where many parameters concerning the NBD's properties were measured. We were specifically looking at the integrated intensity per cell. The number of cells was characterized by the number of Draq5 nuclei counted by the script (Draq5 is a fluorescent nuclear dye). From here the average intensities per cell were calculated on a per image basis and then by a per condition basis (Random, Aligned, Random Matrigel, Aligned Matrigel) for each biological replicate (n=2) and technical replicate (N=3).
 
-## This 
+# Random Matrigel N=2 (Day 3)
 ```{r}
 library(tidyverse)
 library(dplyr)
 library(ggplot2)
+library(cowplot)
 ## DAY 3, AM, N2, 231
 n1<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/MyExptN2_231_AM_Day3NBDglucose.csv"
-d_nbd_n2_AM_231<-read_csv(n1, col_names=TRUE)
+d_nbd_n2_AM_231<-read_csv(n1, col_names=TRUE)  #load in the NBD dataset
 d1<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/MyExptN2_231_AM_Day3Draq5_nucleus.csv"
-d_draq_n2_AM_231<-read_csv(d1, col_names=TRUE)
+d_draq_n2_AM_231<-read_csv(d1, col_names=TRUE) #load in the Draq5 dataset
 
+#Group the NBD thresholded fluorescence intensity by the image number or its respective image, then calculate the mean intensity of the integrated intensity within that image 
 d_nbd_n2_AM_231_meanint<- d_nbd_n2_AM_231%>%
   group_by(ImageNumber)%>%
   summarize(meanIntnbd1= mean(Intensity_IntegratedIntensity_NBDglucose, na.rm=TRUE))
 
+#Group the Draq5 thresholded fluorescence intensity by the image number or its respective image, then calculate the number of Draq5 objects 
 d_draq_n2_AM_231<- d_draq_n2_AM_231%>%
   group_by(ImageNumber)%>%
   summarize(n=n())
 
+#Calculate the the mean intensity of the NBD per cell
 mean_N2_231_AM_Day3<- d_nbd_n2_AM_231_meanint$meanIntnbd1/d_draq_n2_AM_231$n
+
+#Calculate the the mean intensity of the NBD per image
 mean_tot_N2_231_AM_Day3<- (sum(d_nbd_n2_AM_231_meanint$meanIntnbd1/d_draq_n2_AM_231$n))/nrow(d_nbd_n2_AM_231_meanint)
 
 ```
-## Now do the same for Random Matrigel (Day 3)
+# Random Matrigel N=2 (Day 3)
 ```{r D3 RM}
 ## DAY 3, RM, N2, 231
 n2<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/MyExptN2_231_RM_Day3NBDglucose.csv"
@@ -49,7 +55,7 @@ d_draq_n2_RM_231<- d_draq_n2_RM_231%>%
 mean_N2_231_RM_Day3<- d_nbd_n2_RM_231_meanint$meanIntnbd1/d_draq_n2_RM_231$n
 mean_tot_N2_231_RM_Day3<- (sum(d_nbd_n2_RM_231_meanint$meanIntnbd1/d_draq_n2_RM_231$n))/nrow(d_nbd_n2_RM_231_meanint)
 ```
-
+# Random N=2 (Day 3)
 ```{r D3 R}
 ## DAY 3, R, N2, 231
 n3<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/MyExptN2_231_R_Day3NBDglucose.csv"
@@ -68,7 +74,7 @@ d_draq_n2_R_231<- d_draq_n2_R_231%>%
 mean_N2_231_R_Day3<- d_nbd_n2_R_231_meanint$meanIntnbd1/d_draq_n2_R_231$n
 mean_tot_N2_231_R_Day3<- (sum(d_nbd_n2_R_231_meanint$meanIntnbd1/d_draq_n2_R_231$n))/nrow(d_nbd_n2_R_231_meanint)
 ```
-
+# Aligned N=2 (Day 3)
 ```{r D3 A}
 ## DAY 3, A, N2, 231
 n4<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/MyExptN2_231_A_Day3NBDglucose.csv"
@@ -87,7 +93,7 @@ d_draq_n2_A_231<- d_draq_n2_A_231%>%
 mean_N2_231_A_Day3<- d_nbd_n2_A_231_meanint$meanIntnbd1/d_draq_n2_A_231$n
 mean_tot_N2_231_A_Day3<- (sum(d_nbd_n2_A_231_meanint$meanIntnbd1/d_draq_n2_A_231$n))/nrow(d_nbd_n2_A_231_meanint)
 ```
-
+# Random Matrigel N=2 (Day 5)
 ```{r D5 RM}
 ## DAY 5, RM, N2, 231
 n5<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_Day5_N2_231-nbd.csv"
@@ -106,6 +112,7 @@ d_draq_n2_RM5_231<- d_draq_n2_RM5_231%>%
 mean_N2_231_RM_Day5<- d_nbd_n2_RM5_231_meanint$meanIntnbd1/d_draq_n2_RM5_231$n
 mean_tot_N2_231_RM_Day5<- (sum(d_nbd_n2_RM5_231_meanint$meanIntnbd1/d_draq_n2_RM5_231$n))/nrow(d_nbd_n2_RM5_231_meanint)
 ```
+# Aligned Matrigel N=2 (Day 5)
 
 ```{r D5 AM}
 ## DAY 5, AM, N2, 231
@@ -125,6 +132,7 @@ d_draq_n2_AM5_231<- d_draq_n2_AM5_231%>%
 mean_N2_231_AM_Day5<- d_nbd_n2_AM5_231_meanint$meanIntnbd1/d_draq_n2_AM5_231$n
 mean_tot_N2_231_AM_Day5<- (sum(d_nbd_n2_AM5_231_meanint$meanIntnbd1/d_draq_n2_AM5_231$n))/nrow(d_nbd_n2_AM5_231_meanint)
 ```
+# Aligned N=2 (Day 5)
 
 ```{r D5 A}
 ## DAY 5, A, N2, 231
@@ -144,6 +152,7 @@ d_draq_n2_A5_231<- d_draq_n2_A5_231%>%
 mean_N2_231_A_Day5<- d_nbd_n2_A5_231_meanint$meanIntnbd1/d_draq_n2_A5_231$n
 mean_tot_N2_231_A_Day5<- (sum(d_nbd_n2_A5_231_meanint$meanIntnbd1/d_draq_n2_A5_231$n))/nrow(d_nbd_n2_A5_231_meanint)
 ```
+# Random N=2 (Day 5)
 
 ```{r D5 R}
 ## DAY 5, R, N2, 231
@@ -164,10 +173,9 @@ mean_N2_231_R_Day5<- d_nbd_n2_R5_231_meanint$meanIntnbd1/d_draq_n2_R5_231$n
 
 mean_tot_N2_231_R_Day5<- (sum(d_nbd_n2_R5_231_meanint$meanIntnbd1/d_draq_n2_R5_231$n))/nrow(d_nbd_n2_R5_231_meanint)
 ```
-
+# Random N=1 (Day 5)
 ```{r D5 R N1}
 ## DAY 5, R, N2, 231
-library(tidyverse)
 n9<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY5_231_N1_NBDglucose.csv"
 d_nbd_n1_R5_231<-read_csv(n9, col_names=TRUE)
 d9<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY5_231_N1_Draq5_nucleus.csv"
@@ -185,9 +193,8 @@ mean_N1_231_R_Day5<- d_nbd_n1_R5_231_meanint$meanIntnbd1/d_draq_n1_R5_231$n
 
 mean_tot_N1_231_R_Day5<- (sum(d_nbd_n1_R5_231_meanint$meanIntnbd1/d_draq_n1_R5_231$n))/nrow(d_nbd_n1_R5_231_meanint)
 ```
-
+# Random Matrigel N=1 (Day 5)
 ```{r D5 RM N1}
-library(tidyverse)
 n10<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY5_231_N1_NBDglucose.csv"
 d_nbd_n1_RM5_231<-read_csv(n10, col_names=TRUE)
 d10<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY5_231_N1_Draq5_nucleus.csv"
@@ -205,9 +212,8 @@ mean_N1_231_RM_Day5<- d_nbd_n1_RM5_231_meanint$meanIntnbd1/d_draq_n1_RM5_231$n
 
 mean_tot_N1_231_RM_Day5<- (sum(d_nbd_n1_RM5_231_meanint$meanIntnbd1/d_draq_n1_RM5_231$n))/nrow(d_nbd_n1_RM5_231_meanint)
 ```
+# Aligned Matrigel N=1 (Day 5)
 ```{r D5 AM N1}
-
-library(tidyverse)
 n11<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY5_231_N1_NBDglucose.csv"
 d_nbd_n1_AM5_231<-read_csv(n11, col_names=TRUE)
 d11<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY5_231_N1_Draq5_nucleus.csv"
@@ -225,8 +231,9 @@ mean_N1_231_AM_Day5<- d_nbd_n1_AM5_231_meanint$meanIntnbd1/d_draq_n1_AM5_231$n
 
 mean_tot_N1_231_AM_Day5<- (sum(d_nbd_n1_AM5_231_meanint$meanIntnbd1/d_draq_n1_AM5_231$n))/nrow(d_nbd_n1_AM5_231_meanint)
 ```
+# Aligned N=1 (Day 5)
+
 ```{r D5 A N1}
-library(tidyverse)
 n12<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY5_231_N1_realNBDglucose.csv"
 d_nbd_n1_A5_231<-read_csv(n12, col_names=TRUE)
 d12<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY5_231_N1_realDraq5_nucleus.csv"
@@ -244,8 +251,9 @@ mean_N1_231_A_Day5<- d_nbd_n1_A5_231_meanint$meanIntnbd1/d_draq_n1_A5_231$n
 
 mean_tot_N1_231_A_Day5<- (sum(d_nbd_n1_A5_231_meanint$meanIntnbd1/d_draq_n1_A5_231$n))/nrow(d_nbd_n1_A5_231_meanint)
 ```
+# Aligned N=1 (Day 3)
+
 ```{r D3 A N1}
-library(tidyverse)
 n13<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY3_231_N1_NBDglucose.csv"
 d_nbd_n1_A3_231<-read_csv(n13, col_names=TRUE)
 d13<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY3_231_N1_Draq5_nucleus.csv"
@@ -263,9 +271,8 @@ mean_N1_231_A_Day3<- d_nbd_n1_A3_231_meanint$meanIntnbd1/d_draq_n1_A3_231$n
 
 mean_tot_N1_231_A_Day3<- (sum(d_nbd_n1_A3_231_meanint$meanIntnbd1/d_draq_n1_A3_231$n))/nrow(d_nbd_n1_A3_231_meanint)
 ```
-
+# Aligned Matrigel N=1 (Day 3)
 ```{r D3 AM N1}
-library(tidyverse)
 n14<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY3_231_N1_NBDglucose.csv"
 d_nbd_n1_AM3_231<-read_csv(n14, col_names=TRUE)
 d14<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY3_231_N1_Draq5_nucleus.csv"
@@ -283,8 +290,9 @@ mean_N1_231_AM_Day3<- d_nbd_n1_AM3_231_meanint$meanIntnbd1/d_draq_n1_AM3_231$n
 
 mean_tot_N1_231_AM_Day3<- (sum(d_nbd_n1_AM3_231_meanint$meanIntnbd1/d_draq_n1_AM3_231$n))/nrow(d_nbd_n1_AM3_231_meanint)
 ```
+# Random Matrigel N=1 (Day 3)
+
 ```{r D3 RM N1}
-library(tidyverse)
 n15<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY3_231_N1_realNBDglucose.csv"
 d_nbd_n1_RM3_231<-read_csv(n15, col_names=TRUE)
 d15<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY3_231_N1_realDraq5_nucleus.csv"
@@ -302,9 +310,9 @@ mean_N1_231_RM_Day3<- d_nbd_n1_RM3_231_meanint$meanIntnbd1/d_draq_n1_RM3_231$n
 
 mean_tot_N1_231_RM_Day3<- (sum(d_nbd_n1_RM3_231_meanint$meanIntnbd1/d_draq_n1_RM3_231$n))/nrow(d_nbd_n1_RM3_231_meanint)
 ```
+# Random N=1 (Day 3)
 
 ```{r D3 R N1}
-library(tidyverse)
 n16<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY3_231_N1_NBDglucose.csv"
 d_nbd_n1_R3_231<-read_csv(n15, col_names=TRUE)
 d16<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY3_231_N1_Draq5_nucleus.csv"
@@ -322,12 +330,10 @@ mean_N1_231_R_Day3<- d_nbd_n1_R3_231_meanint$meanIntnbd1/d_draq_n1_R3_231$n
 
 mean_tot_N1_231_R_Day3<- (sum(d_nbd_n1_R3_231_meanint$meanIntnbd1/d_draq_n1_R3_231$n))/nrow(d_nbd_n1_R3_231_meanint)
 ```
-
-
+# Random N=3 (Day 5)
 
 ```{r D5 R N3}
 ## DAY 5, R, N3, 231
-library(tidyverse)
 n17<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY5_231_N3_NBDglucose.csv"
 d_nbd_n3_R5_231<-read_csv(n17, col_names=TRUE)
 d17<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY5_231_N3_Draq5_nucleus.csv"
@@ -345,9 +351,9 @@ mean_N3_231_R_Day5<- d_nbd_n3_R5_231_meanint$meanIntnbd1/d_draq_n3_R5_231$n
 
 mean_tot_N3_231_R_Day5<- (sum(d_nbd_n3_R5_231_meanint$meanIntnbd1/d_draq_n3_R5_231$n))/nrow(d_nbd_n3_R5_231_meanint)
 ```
+# Random Matrigel N=3 (Day 5)
 
 ```{r D5 RM N3}
-library(tidyverse)
 n18<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY5_231_N3_NBDglucose.csv"
 d_nbd_n3_RM5_231<-read_csv(n18, col_names=TRUE)
 d18<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY5_231_N3_Draq5_nucleus.csv"
@@ -365,10 +371,8 @@ mean_N3_231_RM_Day5<- d_nbd_n3_RM5_231_meanint$meanIntnbd1/d_draq_n3_RM5_231$n
 
 mean_tot_N3_231_RM_Day5<- (sum(d_nbd_n3_RM5_231_meanint$meanIntnbd1/d_draq_n3_RM5_231$n))/nrow(d_nbd_n3_RM5_231_meanint)
 ```
-
+# Aligned Matrigel N=3 (Day 5)
 ```{r D5 AM N3}
-
-library(tidyverse)
 n19<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY5_231_N3_NBDglucose.csv"
 d_nbd_n3_AM5_231<-read_csv(n19, col_names=TRUE)
 d19<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY5_231_N3_Draq5_nucleus.csv"
@@ -386,9 +390,8 @@ mean_N3_231_AM_Day5<- d_nbd_n3_AM5_231_meanint$meanIntnbd1/d_draq_n3_AM5_231$n
 
 mean_tot_N3_231_AM_Day5<- (sum(d_nbd_n3_AM5_231_meanint$meanIntnbd1/d_draq_n3_AM5_231$n))/nrow(d_nbd_n3_AM5_231_meanint)
 ```
-
+# Aligned N=3 (Day 5)
 ```{r D5 A N3}
-library(tidyverse)
 n20<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY5_231_N3_NBDglucose.csv"
 d_nbd_n3_A5_231<-read_csv(n20, col_names=TRUE)
 d20<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY5_231_N3_Draq5_nucleus.csv"
@@ -406,9 +409,8 @@ mean_N3_231_A_Day5<- d_nbd_n3_A5_231_meanint$meanIntnbd1/d_draq_n3_A5_231$n
 
 mean_tot_N3_231_A_Day5<- (sum(d_nbd_n3_A5_231_meanint$meanIntnbd1/d_draq_n3_A5_231$n))/nrow(d_nbd_n3_A5_231_meanint)
 ```
-
+# Aligned N=3 (Day 3)
 ```{r D3 A N3}
-library(tidyverse)
 n21<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY3_231_N3_NBDglucose.csv"
 d_nbd_n3_A3_231<-read_csv(n21, col_names=TRUE)
 d21<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/A_DAY3_231_N3_Draq5_nucleus.csv"
@@ -426,9 +428,8 @@ mean_N3_231_A_Day3<- d_nbd_n3_A3_231_meanint$meanIntnbd1/d_draq_n3_A3_231$n
 
 mean_tot_N3_231_A_Day3<- (sum(d_nbd_n3_A3_231_meanint$meanIntnbd1/d_draq_n3_A3_231$n))/nrow(d_nbd_n3_A3_231_meanint)
 ```
-
+# Aligned Matrigel N=3 (Day 3)
 ```{r D3 AM N3}
-library(tidyverse)
 n22<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY3_231_N3_NBDglucose.csv"
 d_nbd_n3_AM3_231<-read_csv(n22, col_names=TRUE)
 d22<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/AM_DAY3_231_N3_Draq5_nucleus.csv"
@@ -446,9 +447,8 @@ mean_N3_231_AM_Day3<- d_nbd_n3_AM3_231_meanint$meanIntnbd1/d_draq_n3_AM3_231$n
 
 mean_tot_N3_231_AM_Day3<- (sum(d_nbd_n3_AM3_231_meanint$meanIntnbd1/d_draq_n3_AM3_231$n))/nrow(d_nbd_n3_AM3_231_meanint)
 ```
-
-```{r D3 RM N3}
-library(tidyverse)
+# Random Matrigel N=3 (Day 3)
+```{r D3 RM N3} 
 n23<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY3_231_N3_NBDglucose.csv"
 d_nbd_n3_RM3_231<-read_csv(n23, col_names=TRUE)
 d23<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/RM_DAY3_231_N3_Draq5_nucleus.csv"
@@ -466,9 +466,8 @@ mean_N3_231_RM_Day3<- d_nbd_n3_RM3_231_meanint$meanIntnbd1/d_draq_n3_RM3_231$n
 
 mean_tot_N3_231_RM_Day3<- (sum(d_nbd_n3_RM3_231_meanint$meanIntnbd1/d_draq_n3_RM3_231$n))/nrow(d_nbd_n3_RM3_231_meanint)
 ```
-
+# Random N=3 (Day 3)
 ```{r D3 R N3}
-library(tidyverse)
 n24<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY3_231_N3_NBDglucose.csv"
 d_nbd_n3_R3_231<-read_csv(n24, col_names=TRUE)
 d24<- "https://raw.githubusercontent.com/mrpickett26/NBD_glucose_Analysis/main/R_DAY3_231_N3_Draq5_nucleus.csv"
@@ -486,7 +485,7 @@ mean_N3_231_R_Day3<- d_nbd_n3_R3_231_meanint$meanIntnbd1/d_draq_n3_R3_231$n
 
 mean_tot_N3_231_R_Day3<- (sum(d_nbd_n3_R3_231_meanint$meanIntnbd1/d_draq_n3_R3_231$n))/nrow(d_nbd_n3_R3_231_meanint)
 ```
-
+#A good way (but very basic) is to use a barplot to plot the means with error bars that represent the standard errors of the means. I did this below-- also I know there are probably cleaner ways to go about this, but I wanted standard error for the image aggregates instead of the concentated totals so I didn't use ggplot becuase it was easier for me to do custom error bars this way! 
 ```{r plot}
 #plot the data
 mean_total_Aligned_Day3<- (mean_tot_N1_231_A_Day3+ mean_tot_N2_231_A_Day3+ mean_tot_N3_231_A_Day3)/3
@@ -535,6 +534,7 @@ bar_plot_fig<-barplot(df_total,
         font.lab=2)
 arrows(bar_plot_fig, df_total+std_errs, bar_plot_fig, df_total-std_errs, angle=90, code=3, length=0.06, col="black")
 
+# Some t-tests!
 R_A_Day3<- t.test(conc_day3_A,conc_day3_R)
 R_A_Day3
 summary(R_A_Day3)
@@ -546,45 +546,25 @@ R_A_Day5
 RM_AM_Day5<- t.test(conc_day5_AM, conc_day5_RM)
 RM_AM_Day5
 
-# total%>%
-#   .id = "id" %>%
-#   ggplot(aes()) +
-#   geom_bar(aes(fill = id), stat = "identity", position = "dodge2", width = 0.5) +
-#   geom_errorbar(aes(ymin = mean - sd, ymax = mean + sd, width = 0.1, colour = id)) 
-# 
-# library(reshape2)
-# library(ggplot2)
-# total<-cbind.data.frame(df3_conc, df5_conc)
-# total<-as.data.frame(total)
-
-
-# barplot(df3, main="Average Integrated Intensity per Nuclei 231 Day 3", names.arg =c( "Random","Aligned","RM","AM"), ylab="Integrated Intensity", col=c("#eb8060", "#b9e38d", "#a1e9f0", "#d9b1f0"))
-# 
-# barplot(df5, main="Average Integrated Intensity per Nuclei 231 Day 5", names.arg =c("Random","Aligned","RM","AM"), ylab="Integrated Intensity", col=c("#eb8060", "#b9e38d", "#a1e9f0", "#d9b1f0"))
-# 
-
 ```
+##Actual Data Visualization
+#The data visualization can probably be spiced up a bit... it is still relatively boring data. I was orgininally wanting to do something more interactive that would change intensity of brightness, but wasn't really sure how it would be applicable to what I wanted to represent. The samples that included the matrigel coating are more similar to the breast microenvironment and are more supportive of cellular proliferation-- meaning there are a lot more cells per image. One issue with the script and this dataset is that when we are imaging, the z-planes of going through the scaffold can produce a lot of background fluorescence from the cells that are embedded in the scaffold (fluorescing in a different z plane). I thought it would be cool to do something where the number of cells and intensity was represented on a single plot. My best option was looking at a heat map where we can colormetrically represent the intensity and represent the number of cells per image using the size of the data points. 
 
-
-
-```{r plot}
-#plot the data
-library(cowplot)
+```{r plot advanced Day 3}
+#Need to rearrange some of the data to make it easier to plot in this way
 df_nbd_A3<-as_tibble(c(d_nbd_n1_A3_231_meanint$meanIntnbd1,d_nbd_n2_A_231_meanint$meanIntnbd1, d_nbd_n3_A3_231_meanint$meanIntnbd1))
 df_draq<- as_tibble(c(d_draq_n1_A3_231$n, d_draq_n2_A_231$n, d_draq_n3_A3_231$n))
 df_num_A3<- as_tibble(c(d_nbd_n1_A3_231_meanint$ImageNumber,d_nbd_n2_A_231_meanint$ImageNumber, d_nbd_n3_A3_231_meanint$ImageNumber))
 df_sum_A3<- bind_cols(df_num_A3, df_num_A3, df_draq, df_nbd_A3)
 colnames(df_sum_A3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
-
+#Use this plot from ggplot to plot the data
 df_sum_A3<- as_data_frame(df_sum_A3)
 tit_A3<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei Aligned Day 3"
 fig_A3<-ggplot(df_sum_A3, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_A3, 40))
-fig_A3
-
+  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_A3, 25))
 ## RANDOM day 3
 df_nbd_R3<-as_tibble(c(d_nbd_n1_R3_231_meanint$meanIntnbd1,d_nbd_n2_R_231_meanint$meanIntnbd1, d_nbd_n3_R3_231_meanint$meanIntnbd1))
 dfR3_draq<- as_tibble(c(d_draq_n1_R3_231$n, d_draq_n2_R_231$n, d_draq_n3_R3_231$n))
@@ -592,16 +572,12 @@ df_num_R3<- as_tibble(c(d_nbd_n1_R3_231_meanint$ImageNumber,d_nbd_n2_R_231_meani
 df_sum_R3<- bind_cols(df_num_R3, df_num_R3, dfR3_draq, df_nbd_R3)
 colnames(df_sum_R3) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
-
 df_sum_R3<- as_data_frame(df_sum_R3)
 tit_R3<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei Random Day 3"
 fig_R3<-ggplot(df_sum_R3, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,7))+labs(title = str_wrap(tit_R3, 40))
-fig_R3
-
-
+  scale_size_continuous(range = c(1,7))+labs(title = str_wrap(tit_R3, 25))
 ##RM Day 3
 df_nbd_RM3<-as_tibble(c(d_nbd_n1_RM3_231_meanint$meanIntnbd1,d_nbd_n2_RM_231_meanint$meanIntnbd1, d_nbd_n3_RM3_231_meanint$meanIntnbd1))
 dfRM3_draq<- as_tibble(c(d_draq_n1_RM3_231$n, d_draq_n2_RM_231$n, d_draq_n3_RM3_231$n))
@@ -614,8 +590,7 @@ tit_RM3<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei 
 fig_RM3<-ggplot(df_sum_RM3, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_RM3, 40))
-fig_RM3
+  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_RM3, 25))
 
 ## Aligned Matrigel Day 3
 df_nbd_AM3<-as_tibble(c(d_nbd_n1_AM3_231_meanint$meanIntnbd1,d_nbd_n2_AM_231_meanint$meanIntnbd1, d_nbd_n3_AM3_231_meanint$meanIntnbd1))
@@ -629,32 +604,23 @@ tit_AM3<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei 
 fig_AM3<-ggplot(df_sum_AM3, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM3, 40))
-fig_AM3
-
-
-
-
+  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM3, 25))
 ```
 
-```{r plot}
+```{r plot advanced Day 5}
 #plot the data Day5
-library(cowplot)
 df_nbd_A5<-as_tibble(c(d_nbd_n1_A5_231_meanint$meanIntnbd1,d_nbd_n2_A5_231_meanint$meanIntnbd1, d_nbd_n3_A5_231_meanint$meanIntnbd1))
 df_draq_A5<- as_tibble(c(d_draq_n1_A5_231$n, d_draq_n2_A5_231$n, d_draq_n3_A5_231$n))
 df_num_A5<- as_tibble(c(d_nbd_n1_A5_231_meanint$ImageNumber,d_nbd_n2_A5_231_meanint$ImageNumber, d_nbd_n3_A5_231_meanint$ImageNumber))
 df_sum_A5<- bind_cols(df_num_A5, df_num_A5, df_draq_A5, df_nbd_A5)
 colnames(df_sum_A5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
-
 df_sum_A5<- as_data_frame(df_sum_A5)
 tit_A5<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei Aligned Day 5"
 fig_A5<-ggplot(df_sum_A5, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_A5, 40))
-fig_A5
-
+  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_A5, 25))
 ## RANDOM day 5
 df_nbd_R5<-as_tibble(c(d_nbd_n1_R5_231_meanint$meanIntnbd1,d_nbd_n2_R5_231_meanint$meanIntnbd1, d_nbd_n3_R5_231_meanint$meanIntnbd1))
 dfR5_draq<- as_tibble(c(d_draq_n1_R5_231$n, d_draq_n2_R5_231$n, d_draq_n3_R5_231$n))
@@ -662,15 +628,12 @@ df_num_R5<- as_tibble(c(d_nbd_n1_R5_231_meanint$ImageNumber,d_nbd_n2_R5_231_mean
 df_sum_R5<- bind_cols(df_num_R5, df_num_R5, dfR5_draq, df_nbd_R5)
 colnames(df_sum_R5) <- c('Image_Number','Image__Number','num_of_nuclei', 'intensity')
 
-
 df_sum_R5<- as_data_frame(df_sum_R5)
 tit_R5<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei Random Day 5"
 fig_R5<-ggplot(df_sum_R5, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_R5, 40))
-fig_R5
-
+  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_R5, 25))
 
 ##RM Day 3
 df_nbd_RM5<-as_tibble(c(d_nbd_n1_RM5_231_meanint$meanIntnbd1,d_nbd_n2_RM5_231_meanint$meanIntnbd1, d_nbd_n3_RM5_231_meanint$meanIntnbd1))
@@ -684,8 +647,7 @@ tit_RM5<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei 
 fig_RM5<-ggplot(df_sum_RM5, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_RM5, 40))
-fig_RM5
+  scale_size_continuous(range = c(1,10))+labs(title = str_wrap(tit_RM5, 25))
 
 ## Aligned Matrigel Day 
 df_nbd_AM5<-as_tibble(c(d_nbd_n1_AM5_231_meanint$meanIntnbd1,d_nbd_n2_AM5_231_meanint$meanIntnbd1, d_nbd_n3_AM5_231_meanint$meanIntnbd1))
@@ -699,17 +661,27 @@ tit_AM5<-"Heat Map and Size Plot for NBD Glucose Intensity and Number of Nuclei 
 fig_AM5<-ggplot(df_sum_AM5, aes(x= Image_Number, y = Image__Number))+
    geom_tile(fill="white", color = "red") +
   geom_point(aes(color = intensity, size = num_of_nuclei))+
-  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM5, 40))
-fig_AM5
-
-
+  scale_size_continuous(range = c(1,9))+labs(title = str_wrap(tit_AM5, 25))
+```
+#Now it is useful to plot the graphs for Day 3. Between aligned and random, the intensity is less for the aligned condition than for the random, but there are more nuclei in the aligned case. Between the Aligned Matrigel and Random Matrigel case, the intensity is higher for the Aligned Matrigel (which supports our hypothesis). Additionally there are slightly more nuclei for the Aligned Matrigel case. 
+```{r plot advanced Day 3 Btw Alignment}
 plot_grid(fig_A3, fig_R3, labels = c('A', 'R'))
 plot_grid(fig_AM3, fig_RM3, labels = c('AM', 'RM'))
-
+```
+#Plot the graphs for Day 5. Between aligned and random, the intensity is similar for the aligned condition and the random, but there are more nuclei in the random case. Between the Aligned Matrigel and Random Matrigel case, the intensity is higher for the Aligned Matrigel (which supports our hypothesis), but there looks to be  more nuclei for the Random Matrigel case. 
+```{r plot advanced Day 5 Btw Alignment}
 plot_grid(fig_A5, fig_R5, labels = c('A', 'R'))
 plot_grid(fig_AM5, fig_RM5, labels = c('AM', 'RM'))
-
-
+```
+#Now it is useful to plot the graphs for Day 3 and 5 for the Matrigel groups. Between Day 3 and Day 5, the intensity is less for the Day 3 condition than the Day 5 for the random matrigel, and there are more nuclei in the Day 5 case. Between Day 3 and Day 5, the intensity is less for the Day 3 condition than the Day 5 for the Aligned matrigel, and there are slightly more nuclei in the Day 5 Aligned Matrigel case.
+```{r plot Aligned Matrigel and Random Matrigel Btw Days}
+plot_grid(fig_A3, fig_AM5, labels = c('AM3', 'AM5'))
+plot_grid(fig_RM3, fig_RM5, labels = c('RM3', 'RM5'))
+```
+#Now it is useful to plot the graphs for Day 3 and 5 for the Aligned and Random groups, respectively. Between Day 3 and Day 5, the intensity is less for the Day 3 condition than the Day 5 for the Random, and there are more nuclei in the Day 5 case. Between Day 3 and Day 5, the intensity is less for the Day 3 condition than the Day 5 for the Aligned , but there are slightly more nuclei in the Day 3 Aligned  case. I think this could be due to alogirithmic error in not accounting for proper background in the z-direction of the images.
+```{r plot Aligned and Random Btw Days}
+plot_grid(fig_R3, fig_R5, labels = c('R3', 'R5'))
+plot_grid(fig_A3, fig_A5, labels = c('A3', 'A5'))
 ```
 
 
